--- a/.github/workflows/npm-package.yml
+++ b/.github/workflows/npm-package.yml
@@ -2,9 +2,9 @@ name: registry_package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
